--- a/src/App.css
+++ b/src/App.css
@@ -2,37 +2,122 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.fa-handshake {
+  font-size: 50px;
+  color: #9e003a;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+
+.bubble-row {
+  background-color: transparent;
+  height: 220px;
+  padding-inline: 2rem;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.bubble-div {
+  height: 140px;
+  width: 140px;
+  border-radius: 50%;
+  border: 1px solid #A1C181;
+  background-color: white;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.bubble-div p {
+  margin-top: 1.1rem;
+  font-weight: bold;
+  color: #9e003a;
+}
+
+.bubble-row h3 {
+  color: #cd6289;
+  font-size: 16px;
+  font-weight: bold;
+  margin-top: .2rem;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.bubble-row h2 {
+  color: white;
+  margin-bottom: 0;
+  margin-top: .5em;
+  display: flex;
+  justify-content: center;
+  font-size: 24px;
+  align-items: center;
+}
+
+.heladiven {
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
 }
 
-.App-link {
-  color: #61dafb;
+.desc {
+  text-align: left;
+}
+.ärenderuta p {
+  color: rgb(41, 14, 14);
+}
+.namnotid p {
+  margin-bottom: 1px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.comment {
+  text-align: left;
+}
+
+.casecard {
+  box-shadow: 1px 1px 5px #33333316;
+  background-color: #9e003a;
+  margin: 2rem 0;
+  padding: 1rem;
+  border-radius: 1rem;
+  display: block;
+  text-decoration: none;
+  color: rgb(234, 234, 234);
+}
+
+.casecard p {
+  color: rgb(255, 224, 224);
+}
+
+.casecard:hover {
+  box-shadow: 5px 5px 10px #33333382;
+}
+
+.case a:hover {
+  color: orange;
+}
+
+.btn {
+  padding: .5em 1.2em;
+  border-radius: .5em;
+  border: 0;
+  background-color: orange;
+  color: #9e003a;
+  font-weight: 700;
+  text-transform: uppercase;
+  cursor: pointer;
+}
+
+.black {
+  color:rgb(41, 14, 14);
+}
+
+.yellow {
+  color: orange;
+}
+
+.green {
+  color: green
+}
+
+.red {
+  color: rgb(255, 1, 1);
 }
